# llm-tuning-toolkit

./: .gitignore  README.md  TODO.md  auto-tune-config.yaml  bench_config.yaml  pyproject.toml
benchmarking_results/deepseek-ai--deepseek-r1-distill-qwen-32b/auto-tune/: auto-tune-config.yaml
benchmarking_results/deepseek-ai--deepseek-r1-distill-qwen-32b/benchmarking/: bench_config.yaml
benchmarking_results/google--gemma-3-12b-it/auto-tune/: auto-tune-config.yaml
benchmarking_results/google--gemma-3-12b-it/benchmarking/: bench_config.yaml
benchmarking_results/google--gemma-3-12b-it/r760xa-nvidia-l40s/: bench_config.yaml
benchmarking_results/google--gemma-3-1b-it/auto-tune/: auto-tune-config.yaml
benchmarking_results/google--gemma-3-1b-it/r760xa-nvidia-l40s/: bench_config.yaml
benchmarking_results/google--gemma-3-4b-it/: bench_config.yaml
benchmarking_results/google--gemma-3-4b-it/auto-tune/: auto-tune-config.yaml
benchmarking_results/google--gemma-3-4b-it/benchmarking/: bench_config.yaml
benchmarking_results/google--gemma-3-4b-it/r760xa-nvidia-l40s/: bench_config.yaml
benchmarking_results/google-gemma-3-4b-it/balanced/: google_gemma-3-4b-it_2025-09-01-14-39-50.json  google_gemma-3-4b-it_2025-09-01-18-12-10.json
benchmarking_results/google-gemma-3-4b-it/high-concurrency/: google_gemma-3-4b-it_2025-09-02-17-24-45.json
benchmarking_results/google-gemma-3-4b-it/high-context/: google_gemma-3-4b-it_2025-09-05-14-43-13.json
benchmarking_results/meta-llama/: Meta-Llama-3.1-8b-Instruct_2025-09-18-16-43-55.json
benchmarking_results/meta-llama--meta-llama-3.1-8b-instruct/auto-tune/: auto-tune-config.yaml
benchmarking_results/meta-llama--meta-llama-3.1-8b-instruct/benchmarking/: bench_config.yaml
benchmarking_results/meta-llama-meta-llama-3.1-8b-Instruct/: bench_config.yaml
results/google-gemma-3-4b-it/balanced/: google_gemma-3-4b-it_2025-09-02-10-56-16.json
results/google-gemma-3-4b-it/high-concurrency/: google_gemma-3-4b-it_2025-09-02-17-24-45.json
results/google-gemma-3-4b-it/high-context/: google_gemma-3-4b-it_2025-09-05-09-49-27.json
results/high-concurrency/: google_gemma-3-4b-it_2025-09-02-12-54-27.json  google_gemma-3-4b-it_2025-09-03-10-37-58.json
src/: auto-tune.py  launch_bench.py
src/auto_tune/: auto_tune.py  cli.py  tuner.py
src/benchmarker/: launch_bench.py
src/dashboard/: app.py  benchmarks.parquet  parse_results.py
(+359 files in other folders)
